# embedded-device-test-framework

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
examples/: example_suite.cpp  temperature_sensor.hpp  tmp102_session.txt
include/edtf/: assertions.hpp  edtf.hpp  mock_hardware.hpp  registry.hpp  reporter.hpp  runner.hpp
src/: registry.cpp  reporter.cpp  runner.cpp
tests/: framework_tests.cpp
